# binlang

./: .gitignore  Cargo.toml  README.md
editors/code/binlang/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  language-configuration.json  package.json  pnpm-lock.yaml
editors/code/binlang/syntaxes/: binlang.tmLanguage.json
examples/: CMakeLists.txt  greycat_abi.bl  simple.bl
examples/src/: greycat_abi.c  greycat_abi.h  main.c
libs/c/: CMakeLists.txt  alloc.c  array.h  binlang.c  binlang.h  vec.h
libs/c/include/: alloc.h  assert.h
src/: ast.rs  ctx.rs  error.rs  hir.rs  lexer.rs  lib.rs  main.rs  parser.rs  symbols.rs
src/generators/: gen_c.rs  mod.rs
